--- a/info.plist
+++ b/info.plist
@@ -93,7 +93,7 @@
 				<key>runningsubtext</key>
 				<string>Searching...</string>
 				<key>script</key>
-				<string>PROFILE="~/Library/Application Support/Google/Chrome/Default"
+				<string>PROFILE="~/Library/Application Support/Google/Chrome/Profile 1"
 PATH="env/bin:$PATH"
 python3 chrome.py "${PROFILE}" "{query}"</string>
 				<key>scriptargtype</key>
@@ -156,25 +156,27 @@ ls ~/Library/Application\ Support/Google/Chrome/ | grep Profile</string>
 		<key>28DD6FE4-9B8F-404F-858E-31FB8159BDAF</key>
 		<dict>
 			<key>xpos</key>
-			<integer>700</integer>
+			<real>700</real>
 			<key>ypos</key>
 			<real>130</real>
 		</dict>
 		<key>B8584F68-2E3A-4883-AE38-1F31EE5C2657</key>
 		<dict>
 			<key>xpos</key>
-			<integer>700</integer>
+			<real>700</real>
 			<key>ypos</key>
-			<real>10</real>
+			<real>15</real>
 		</dict>
 		<key>F5EE6337-C93B-44AE-9DB3-C9C1C204D42F</key>
 		<dict>
 			<key>xpos</key>
-			<integer>300</integer>
+			<real>300</real>
 			<key>ypos</key>
-			<real>10</real>
+			<real>15</real>
 		</dict>
 	</dict>
+	<key>userconfigurationconfig</key>
+	<array/>
 	<key>version</key>
 	<string>0.8.0</string>
 	<key>webaddress</key>
